- UI implementation - Formatting correction - Test correction

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,7 +3,7 @@
 @import '~materialize-css/sass/materialize';
 @import url('https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap');
 @import '~@fortawesome/fontawesome-free/css/all.css';
-@import url('https://unpkg.com/nes.css@2.2.0/css/nes.min.css');
+@import './node_modules/nes.css/css/nes.min';
 
 body {
   font-family: 'Lato', sans-serif;
@@ -29,7 +29,7 @@ strong {
 
 .parallax-container {
   position: relative;
-  height: calc(100vh - 56px);
+  height: 700px;
   min-height: $parallax-min-height;
   background-color: rgba($primary-color-dark, 0.5);
 
