--- a/src/app/home/banner/banner.component.html
+++ b/src/app/home/banner/banner.component.html
@@ -1,22 +1,34 @@
 <div wgjTransparentNavbar class="parallax-container valign-wrapper">
-    <span id="color-layer"></span>
-    <div class="parallax-container-data center-align">
-        <div id="banner-container" class="container">
-            <div class="row">
-                <div class="col offset-m2 m8">
-                    <img id="wgj-logo" src="assets/images/logo-center.svg" alt="WGJ">
-                    <h2 class="nes-text is-primary">
-                        Women Game Jam Bolivia 2020
-                    </h2>
-                    <h3 class="nes-text is-error date-banner">Agosto 21 - 30</h3>
-                </div>
-                <div class="col offset-m3 m6">
-                    <a class="nes-btn is-warning">Registrate!</a>
-                </div>
-            </div>
+  <div class="parallax-container-data center-align">
+    <div id="banner-container" class="container">
+      <div class="row">
+        <img id="wgj-logo" src="assets/images/logo-main.svg" alt="woman game jam bolivia">
+        <div class="col offset-m2 m8">
+          <img id="character" src="assets/images/characters.svg" alt="personajes">
+          <h3 class="invitation-text">
+            Participa y desarrolla tu creatividad e imaginación en un Game Jam online junto a mas chicas
+            creando tus propios juegos
+          </h3>
         </div>
+        <div class="center">
+          <button class="transparent button-signup">
+            <img src="assets/images/button.svg" alt="inscribete">
+          </button>
+        </div>
+        <div class="center">
+          <div class="row">
+            <div class="col s6">
+              <img src="assets/images/wtm.svg" class="right" alt="women tech makers cochabamba"/>
+            </div>
+            <div class="col s6">
+              <img src="assets/images/gdgcochabamba.svg" class="left" alt="gdg cochabamba"/>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-    <div wgjParallax class="parallax">
-        <img id="wgj-banner" src="assets/images/banner.svg" alt="WGJ Background">
-    </div>
+  </div>
+  <div wgjParallax class="parallax">
+    <img id="wgj-banner" src="assets/images/banner.svg" alt="WGJ Background">
+  </div>
 </div>
