--- a/src/app/home/banner/banner.component.scss
+++ b/src/app/home/banner/banner.component.scss
@@ -5,18 +5,23 @@
   object-fit: contain;
 }
 
-#banner-date {
-  width: 100%;
-  height: 34px;
-  font-size: 28px;
-  text-align: center;
-  color: $red-text-color;
+#wgj-logo {
+  max-width: 30%;
+  margin-bottom: 70px;
 }
 
-#iwd-logo {
+#character {
   max-width: 30%;
 }
 
-#date-banner {
-  font-size: 5px;
+.button-signup {
+  margin-top: 10px;
+  margin-bottom: 50px;
+  color: transparent;
+  border-color: transparent;
+}
+
+.invitation-text {
+  font-size: 18px;
+  color: $secondary-color;
 }
