--- a/src/styles.colors.scss
+++ b/src/styles.colors.scss
@@ -1,6 +1,6 @@
 @import '~materialize-css/sass/components/color-variables';
 
-$primary-color: #1c0463 !default;
+$primary-color: #250E59 !default;
 $primary-color-light: false !default;
 $primary-color-dark: false !default;
 
