- change button to a

--- a/src/app/home/social-networks/social-networks.component.html
+++ b/src/app/home/social-networks/social-networks.component.html
@@ -3,8 +3,8 @@
     <div class="col s6">
       <h5 class="follow-us right">Siguenos en</h5>
     </div>
-    <div class="col s6">
+    <a class="col s6" href="https://www.facebook.com/womengamejam">
       <img src="assets/images/like.svg" class="left" alt="facebook"/>
-    </div>
+    </a>
   </div>
 </div>
