--- a/src/app/home/banner/banner.component.html
+++ b/src/app/home/banner/banner.component.html
@@ -29,6 +29,6 @@
     </div>
   </div>
   <div wgjParallax class="parallax">
-    <img id="wgj-banner" src="assets/images/banner.svg" alt="WGJ Background">
+    <img src="assets/images/background.svg" alt="WGJ Background">
   </div>
 </div>
