feacture (avatar-creator): avatar svg builder
- add types
- add avatar builder
- add lib to download image

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,5 @@
 <wgj-banner></wgj-banner>
 <wgj-invitation></wgj-invitation>
 <wgj-events></wgj-events>
+<wgj-avatar-generator></wgj-avatar-generator>
 <wgj-social-networks></wgj-social-networks>
