--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,6 +17,10 @@ a {
   cursor: pointer;
 }
 
+.pixel-text {
+  font-family: "Press Start 2P";
+}
+
 .title {
   color: $primary-color;
   font-size: 2.4285rem;
