Implemented events component. Refactored styles. Added trailing-comma rule to tslint. Added provisional favicon and changed document language to spanish.

--- a/src/app/home/banner/banner.component.html
+++ b/src/app/home/banner/banner.component.html
@@ -1,27 +1,27 @@
 <div wgjTransparentNavbar class="parallax-container valign-wrapper">
-  <div class="parallax-container-data center-align">
-    <div id="banner-container" class="container">
+  <div class="w-100 center-align">
+    <div class="container">
       <div class="row">
         <img id="wgj-logo" src="assets/images/logo-main.svg" alt="woman game jam bolivia">
         <div class="col offset-m2 m8">
           <img id="character" src="assets/images/characters.svg" alt="personajes">
-          <h3 class="invitation-text">
-            Participa y desarrolla tu creatividad e imaginación en un Game Jam online junto a mas chicas
+          <h3 class="white-text invitation-text">
+            Participa y desarrolla tu creatividad e imaginación en un Game Jam online junto a más chicas
             creando tus propios juegos
           </h3>
         </div>
         <div class="center">
           <button class="transparent button-signup">
-            <img src="assets/images/button.svg" alt="inscribete">
+            <img src="assets/images/register.svg" alt="inscríbete">
           </button>
         </div>
         <div class="center">
           <div class="row">
             <div class="col s6">
-              <img src="assets/images/wtm.svg" class="right" alt="women tech makers cochabamba"/>
+              <img src="assets/images/wtm.svg" class="right" alt="women tech makers cochabamba">
             </div>
             <div class="col s6">
-              <img src="assets/images/gdgcochabamba.svg" class="left" alt="gdg cochabamba"/>
+              <img src="assets/images/gdgcochabamba.svg" class="left" alt="gdg cochabamba">
             </div>
           </div>
         </div>
@@ -29,6 +29,6 @@
     </div>
   </div>
   <div wgjParallax class="parallax">
-    <img src="assets/images/background.svg" alt="WGJ Background">
+    <img src="assets/images/background.svg" alt="cielo de noche">
   </div>
 </div>
