--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,4 @@
-<wgj-banner id="banner"></wgj-banner>
+<wgj-banner></wgj-banner>
 <wgj-invitation></wgj-invitation>
+<wgj-events></wgj-events>
 <wgj-social-networks></wgj-social-networks>
