--- a/src/app/home/banner/banner.component.scss
+++ b/src/app/home/banner/banner.component.scss
@@ -1,10 +1,3 @@
-@import '../../../styles.colors';
-@import '../../../styles.variables';
-
-#banner-container {
-  object-fit: contain;
-}
-
 #wgj-logo {
   max-width: 30%;
   margin-bottom: 70px;
@@ -12,6 +5,13 @@
 
 #character {
   max-width: 30%;
+}
+
+.parallax-container {
+  position: relative;
+  height: 100vh;
+  min-height: 700px;
+  max-height: 1024px;
 }
 
 .button-signup {
@@ -23,5 +23,4 @@
 
 .invitation-text {
   font-size: 18px;
-  color: $secondary-color;
 }
