--- a/src/app/home/social-networks/social-networks.component.html
+++ b/src/app/home/social-networks/social-networks.component.html
@@ -1,10 +1,10 @@
 <div class="container">
-  <div class="row">
-    <div class="col s6">
-      <h5 class="follow-us right">Siguenos en</h5>
+  <div class="social-networks valign-wrapper">
+    <div class="w-100 center-align">
+      <span class="mx-1 title">Síguenos en</span>
+      <a class="nes-btn" href="//www.facebook.com/WGJBolivia/" target="_blank" rel="noopener noreferrer">
+        <img src="assets/images/fb-like.svg" alt="facebook">
+      </a>
     </div>
-    <a class="col s6" href="https://www.facebook.com/womengamejam">
-      <img src="assets/images/like.svg" class="left" alt="facebook"/>
-    </a>
   </div>
 </div>
