--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -1,7 +1,7 @@
 <footer class="page-footer">
   <div class="footer-copyright">
     <div class="container center">
-      <img src="assets/images/logo.svg" class="logo-footer" alt="WGJ FOOTER"/>
+      <img src="assets/images/logo.svg" class="logo-footer" alt="women game jam bolivia">
     </div>
   </div>
 </footer>
