--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,12 +1,10 @@
-@import './styles.colors';
 @import './styles.variables';
 @import '~materialize-css/sass/materialize';
-@import url('https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap');
-@import '~@fortawesome/fontawesome-free/css/all.css';
-@import './node_modules/nes.css/css/nes.min';
+@import '~nes.css/css/nes.min';
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap');
 
 body {
-  font-family: 'Lato', sans-serif;
+  font-family: 'Open Sans', sans-serif;
   color: $text-color;
 }
 
@@ -18,27 +16,41 @@ a {
   cursor: pointer;
 }
 
-strong {
-  font-weight: 700;
+.title {
+  color: $primary-color;
+  font-size: 2.4285rem;
+  font-weight: bold;
 }
 
-.top-section {
-  position: relative;
-  z-index: 997;
+.description-text {
+  font-size: 1.285rem;
 }
 
-.parallax-container {
-  position: relative;
-  height: 700px;
-  min-height: $parallax-min-height;
-  background-color: rgba($primary-color-dark, 0.5);
+.nes-btn {
+  font-weight: bold;
+}
 
-  @media #{$medium-and-up} {
-    height: 100vh;
-  }
+// Generic styles
+.w-100 {
+  width: 100%;
+}
 
-  &-data {
-    width: 100%;
-    object-fit: contain;
-  }
+.mx-1 {
+  margin: 0 1rem;
+}
+
+.my-2 {
+  margin: 2rem 0;
+}
+
+.mt-3 {
+  margin-top: 3rem;
+}
+
+.py-6 {
+  padding: 6rem 0;
+}
+
+.pt-2 {
+  padding-top: 2rem;
 }
