--- a/src/styles.variables.scss
+++ b/src/styles.variables.scss
@@ -1,4 +1,21 @@
-@import '~materialize-css/sass/components/variables';
+@import '~materialize-css/sass/components/color-variables';
 
-$parallax-min-height: 840px !default;
-$section-min-height: 500px !default;
+$primary-color: #250E59 !default;
+$primary-color-light: false !default;
+$primary-color-dark: false !default;
+
+@if not $primary-color-light {
+  $primary-color-light: lighten($primary-color, 15%);
+}
+
+@if not $primary-color-dark {
+  $primary-color-dark: darken($primary-color, 15%);
+}
+
+$secondary-color: #5656AF !default;
+$text-color: #3d3d3d !default;
+$success-color: color('green', 'base') !default;
+$error-color: color('red', 'base') !default;
+$link-color: color('light-blue', 'darken-1') !default;
+
+@import '~materialize-css/sass/components/variables';
