Added first meetup event reminder.

--- a/src/app/home/events/events.component.html
+++ b/src/app/home/events/events.component.html
@@ -12,12 +12,29 @@
             <img src="assets/images/meetup.png" alt="meetup">
           </div>
           <div class="col event-reminder">
-            <a class="nes-btn is-primary white-text">Agendar</a>
+            <div title="Agendar" class="addeventatc nes-btn is-primary white-text">
+              Agendar
+              <span class="start">08/01/2020 03:00 PM</span>
+              <span class="end">08/01/2020 05:00 PM</span>
+              <span class="timezone">America/La_Paz</span>
+              <span class="title">PRESS START - 1er Meetup</span>
+              <span class="description">
+                Te invitamos a participar de nuestro primer meetup previo al WGJ Bolivia. Nos introduciremos al mundo
+                del desarrollo y creación de juegos.
+              </span>
+              <span class="location">https://youtu.be/sOkMeVxmxkc</span>
+              <span class="facebook_event">https://www.facebook.com/events/971754923269846</span>
+              <span class="organizer">Women Techmakers Cochabamba y GDG Cochabamba</span>
+            </div>
+            <a class="nes-btn ml-1" href="//youtu.be/sOkMeVxmxkc" target="_blank" rel="noopener noreferrer">
+              <i class="nes-icon youtube is-small"></i>
+            </a>
           </div>
         </div>
-        <div class="event-date valign-wrapper">
-          <div class="w-100">
-            <span class="white-text">Sábado, 1 de Agosto</span>
+        <div class="event-details valign-wrapper">
+          <div class="w-100 my-1">
+            <p class="m-0 white-text">PRESS START - 1er Meetup</p>
+            <p class="m-0 white-text">Sábado, 01 de Agosto 15:00</p>
           </div>
         </div>
       </div>
