--- a/src/app/home/events/events.component.scss
+++ b/src/app/home/events/events.component.scss
@@ -20,10 +20,9 @@
       border-image-repeat: stretch !important;
     }
 
-    .event-date {
+    .event-details {
       background-color: $secondary-color;
       font-weight: bold;
-      height: 40px;
       margin: 0 8px;
     }
   }
