Disabled registration button.

--- a/src/app/home/banner/banner.component.html
+++ b/src/app/home/banner/banner.component.html
@@ -10,11 +10,12 @@
             creando tus propios juegos
           </h3>
         </div>
-        <div class="center">
+        <!-- TODO: Enable when we have the registration form -->
+        <!-- <div class="center">
           <button class="transparent button-signup">
             <img src="assets/images/register.svg" alt="inscríbete">
           </button>
-        </div>
+        </div> -->
         <div class="center">
           <div class="row">
             <div class="col s6">
