--- a/src/app/home/banner/banner.component.html
+++ b/src/app/home/banner/banner.component.html
@@ -10,12 +10,11 @@
             creando tus propios juegos
           </h3>
         </div>
-        <!-- TODO: Enable when we have the registration form -->
-        <!-- <div class="center">
-          <button class="transparent button-signup">
-            <img src="assets/images/register.svg" alt="inscríbete">
-          </button>
-        </div> -->
+        <div class="center">
+          <a href="https://bit.ly/WGJ20-Bol" target="_blank" rel="noopener noreferrer">
+            <img src="assets/images/register.svg" class="button-signup" alt="inscríbete">
+          </a>
+        </div>
         <div class="center">
           <div class="row">
             <div class="col s6">
