feacture (add event level 1) add static content info about event
- add static content info about event bevause we only will have 3 items
- add update info about facebbok and youtube links

--- a/src/app/home/events/events.component.html
+++ b/src/app/home/events/events.component.html
@@ -14,6 +14,38 @@
           <div class="col event-reminder">
             <div title="Agendar" class="addeventatc nes-btn is-primary white-text">
               Agendar
+              <span class="start">08/08/2020 10:00 AM</span>
+              <span class="end">08/08/2020 12:00 PM</span>
+              <span class="timezone">America/La_Paz</span>
+              <span class="title">Level 1 - 2do Meetup</span>
+              <span class="description">
+                Te invitamos a participar de nuestro segundo meetup previo al WGJ Bolivia. Tenemos grandiosos invitad@s! quienes nos contaran sus experiencias en un Game Jam, fracasos y logros.
+                Para la imaginación no hay limites!!!
+              </span>
+              <span class="location">https://youtu.be/ei9RbnuG5RM</span>
+              <span class="facebook_event">https://www.facebook.com/events/774437136657723/</span>
+              <span class="organizer">Women Techmakers Cochabamba y GDG Cochabamba</span>
+            </div>
+            <a class="nes-btn ml-1" href="//youtu.be/ei9RbnuG5RM" target="_blank" rel="noopener noreferrer">
+              <i class="nes-icon youtube is-small"></i>
+            </a>
+          </div>
+        </div>
+        <div class="event-details valign-wrapper">
+          <div class="w-100 my-1">
+            <p class="m-0 white-text">Level 1 - 2do Meetup</p>
+            <p class="m-0 white-text">Sábado, 08 de Agosto 10:00</p>
+          </div>
+        </div>
+      </div>
+      <div class="center-align mt-3">
+        <div class="nes-container is-success is-rounded event-reminder">
+          <div class="col">
+            <img src="assets/images/meetup.png" alt="meetup">
+          </div>
+          <div class="col event-reminder">
+            <div title="Agendar" class="addeventatc nes-btn is-primary white-text">
+              Agendar
               <span class="start">08/01/2020 03:00 PM</span>
               <span class="end">08/01/2020 05:00 PM</span>
               <span class="timezone">America/La_Paz</span>
