--- a/src/app/home/banner/banner.component.html
+++ b/src/app/home/banner/banner.component.html
@@ -2,29 +2,31 @@
   <div class="w-100 center-align">
     <div class="container">
       <div class="row">
-        <img id="wgj-logo" src="assets/images/logo-main.svg" alt="woman game jam bolivia">
-        <div class="col offset-m2 m8">
-          <img id="character" src="assets/images/characters.svg" alt="personajes">
+        <div class="col s12">
+          <img class="mb-2 logo" src="assets/images/banner-logo.png" alt="woman game jam bolivia">
+        </div>
+        <div class="col offset-m3 m6">
+          <img class="characters pb-2" src="assets/images/banner-characters.png" alt="personajes">
           <h3 class="white-text invitation-text">
             Participa y desarrolla tu creatividad e imaginación en un Game Jam online junto a más chicas
             creando tus propios juegos
           </h3>
-        </div>
-        <div class="center">
-          <a href="https://bit.ly/WGJ20-Bol" target="_blank" rel="noopener noreferrer">
-            <img src="assets/images/register.svg" class="button-signup" alt="inscríbete">
-          </a>
-        </div>
-        <div class="center">
-          <div class="row">
-            <div class="col s6">
-              <img src="assets/images/wtm.svg" class="right" alt="women techmakers cochabamba">
-            </div>
-            <div class="col s6">
-              <img src="assets/images/gdgcochabamba.svg" class="left" alt="gdg cochabamba">
-            </div>
+          <h3 class="event-date invitation-text">
+            Del 21 al 30 de Agosto
+          </h3>
+          <div class="mt-1">
+            <a href="https://bit.ly/WGJ20-Bol" target="_blank" rel="noopener noreferrer">
+              <img src="assets/images/register.svg" class="button-signup" alt="inscríbete">
+            </a>
           </div>
         </div>
+      </div>
+    </div>
+  </div>
+  <div class="w-100 pb-2 organizers">
+    <div class="row">
+      <div class="col s12 px-2 center-align">
+        <img class="organizers-image" src="assets/images/banner-organizers.png" alt="women techmakers cochabamba">
       </div>
     </div>
   </div>
