--- a/src/styles.scss
+++ b/src/styles.scss
@@ -56,12 +56,24 @@ a {
   margin: 2rem 0;
 }
 
+.mt-1 {
+  margin-top: 1rem;
+}
+
 .mt-3 {
   margin-top: 3rem;
 }
 
+.mb-2 {
+  margin-bottom: 2rem;
+}
+
 .ml-1 {
   margin-left: 1rem;
+}
+
+.px-2 {
+  padding: 0 2rem !important;
 }
 
 .py-6 {
@@ -70,4 +82,12 @@ a {
 
 .pt-2 {
   padding-top: 2rem;
+}
+
+.pb-1 {
+  padding-bottom: 1rem;
+}
+
+.pb-2 {
+  padding-bottom: 2rem;
 }
