--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,6 @@
 @import './styles.addevent';
 @import './styles.variables';
+@import './styles.generic';
 @import '~materialize-css/sass/materialize';
 @import '~nes.css/css/nes.min';
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap');
@@ -33,61 +34,4 @@ a {
 
 .nes-btn {
   font-weight: bold;
-}
-
-// Generic styles
-.w-100 {
-  width: 100%;
-}
-
-.m-0 {
-  margin: 0;
-}
-
-.mx-1 {
-  margin: 0 1rem;
-}
-
-.my-1 {
-  margin: 1rem 0;
-}
-
-.my-2 {
-  margin: 2rem 0;
-}
-
-.mt-1 {
-  margin-top: 1rem;
-}
-
-.mt-3 {
-  margin-top: 3rem;
-}
-
-.mb-2 {
-  margin-bottom: 2rem;
-}
-
-.ml-1 {
-  margin-left: 1rem;
-}
-
-.px-2 {
-  padding: 0 2rem !important;
-}
-
-.py-6 {
-  padding: 6rem 0;
-}
-
-.pt-2 {
-  padding-top: 2rem;
-}
-
-.pb-1 {
-  padding-bottom: 1rem;
-}
-
-.pb-2 {
-  padding-bottom: 2rem;
 }
