--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,5 @@
 <wgj-banner></wgj-banner>
+<wgj-about-us></wgj-about-us>
 <wgj-invitation></wgj-invitation>
 <wgj-events></wgj-events>
 <wgj-avatar-generator></wgj-avatar-generator>
