Changed invitation component name to our-goal. Changed main message of our-goal component.

--- a/src/app/home/our-goal/our-goal.component.html
+++ b/src/app/home/our-goal/our-goal.component.html
@@ -5,9 +5,8 @@
         <img src="assets/images/heart.svg" alt="corazón">
         <h4 class="title">Nuestro Objetivo</h4>
         <p class="description-text">
-          Women Game Jam es una maratón de desarrollo especialmente enfocada al <b>público femenino</b>. Tiene la
-          intención de brindar más visibilidad, incentivos y redes a las participantes que trabajan o desean trabajar en
-          la industria de los videojuegos.
+          Women Game Jam tiene la intención de brindar más visibilidad, incentivar y crear redes de contacto para los
+          participantes que trabajan o desean trabajar en la industria de los videojuegos.
         </p>
       </div>
       <div class="col offset-m2 m8 left-align">
