--- a/src/app/home/about-us/about-us.component.scss
+++ b/src/app/home/about-us/about-us.component.scss
@@ -1,5 +1,7 @@
+@import '../../../styles.variables';
+
 .about-us {
   font-size: 1.6rem;
   font-style: italic;
-  color: #16064C;
+  color: $about-us-color;
 }
