Improved styles for previous-events.

--- a/src/app/home/previous-events/previous-events.component.html
+++ b/src/app/home/previous-events/previous-events.component.html
@@ -1,72 +1,85 @@
-<div class="events-container">
-  <div class="container">
-    <div class="pt-2 events-content">
-      <h4 class="title">Estás invitada a nuestros eventos</h4>
-      <p class="mt-3 description-text">
-        Estaremos organizando eventos previos al evento principal, serán gratuitos. En ellos podrás conocer a muchas
-        chicas que estarán compartiendo su experiencia creando juegos.
+<div class="container">
+  <h4 class="title">Eventos previos</h4>
+  <div class="row">
+    <div class="col s12 m10 p-0">
+      <p class="description-text">
+        Estaremos organizando eventos previos donde podrás conocer a muchas chicas que estarán compartiendo su experiencia
+        creando juegos.
       </p>
-      <div class="center-align mt-3">
-        <div class="nes-container is-success is-rounded event-reminder">
-          <div class="col">
-            <img src="assets/images/meetup.png" alt="meetup">
+    </div>
+  </div>
+  <div class="row center-align">
+    <div class="col s12 m4 mb-2">
+      <div class="event">
+        <div class="event-border event-border-top first-meetup"></div>
+        <div class="event-border event-border-left first-meetup"></div>
+        <div class="event-border event-border-bottom first-meetup"></div>
+        <div class="event-border event-border-right first-meetup"></div>
+        <div class="row p-1">
+          <div class="col s12 mt-2">
+            <img src="assets/images/first-meetup.png" alt="meetup">
           </div>
-          <div class="col event-reminder">
-            <div title="Agendar" class="addeventatc nes-btn is-primary white-text">
-              Agendar
-              <span class="start">08/08/2020 10:00 AM</span>
-              <span class="end">08/08/2020 12:00 PM</span>
-              <span class="timezone">America/La_Paz</span>
-              <span class="title">Level 1 - 2do Meetup</span>
-              <span class="description">
-                Te invitamos a participar de nuestro segundo meetup previo al WGJ Bolivia. Tenemos grandiosos invitad@s! quienes nos contaran sus experiencias en un Game Jam, fracasos y logros.
-                Para la imaginación no hay limites!!!
-              </span>
-              <span class="location">https://youtu.be/ei9RbnuG5RM</span>
-              <span class="facebook_event">https://www.facebook.com/events/774437136657723/</span>
-              <span class="organizer">Women Techmakers Cochabamba y GDG Cochabamba</span>
-            </div>
-            <a class="nes-btn ml-1" href="//youtu.be/ei9RbnuG5RM" target="_blank" rel="noopener noreferrer">
-              <i class="nes-icon youtube is-small"></i>
+          <div class="col s12 mt-2">
+            <a class="nes-btn first-meetup ml-1" href="//youtu.be/sOkMeVxmxkc" target="_blank"
+              rel="noopener noreferrer">
+              Ver video
             </a>
           </div>
         </div>
-        <div class="event-details valign-wrapper">
+        <div class="event-details first-meetup valign-wrapper">
           <div class="w-100 my-1">
-            <p class="m-0 white-text">Level 1 - 2do Meetup</p>
-            <p class="m-0 white-text">Sábado, 08 de Agosto 10:00</p>
+            <p class="m-0 white-text">PRESS START</p>
+            <p class="m-0 white-text">1er Meetup</p>
           </div>
         </div>
       </div>
-      <div class="center-align mt-3">
-        <div class="nes-container is-success is-rounded event-reminder">
-          <div class="col">
-            <img src="assets/images/meetup.png" alt="meetup">
+    </div>
+    <div class="col s12 m4 mb-2">
+      <div class="event">
+        <div class="event-border event-border-top second-meetup"></div>
+        <div class="event-border event-border-left second-meetup"></div>
+        <div class="event-border event-border-bottom second-meetup"></div>
+        <div class="event-border event-border-right second-meetup"></div>
+        <div class="row p-1">
+          <div class="col s12 mt-2">
+            <img src="assets/images/second-meetup.png" alt="meetup">
           </div>
-          <div class="col event-reminder">
-            <div title="Agendar" class="addeventatc nes-btn is-primary white-text">
-              Agendar
-              <span class="start">08/01/2020 03:00 PM</span>
-              <span class="end">08/01/2020 05:00 PM</span>
-              <span class="timezone">America/La_Paz</span>
-              <span class="title">PRESS START - 1er Meetup</span>
-              <span class="description">
-                Te invitamos a participar de nuestro primer meetup previo al WGJ Bolivia. Nos introduciremos al mundo
-                del desarrollo y creación de juegos.
-              </span>
-              <span class="location">https://youtu.be/sOkMeVxmxkc</span>
-              <span class="facebook_event">https://www.facebook.com/events/971754923269846</span>
-              <span class="organizer">Women Techmakers Cochabamba y GDG Cochabamba</span>
-            </div>
-            <a class="nes-btn ml-1" href="//youtu.be/sOkMeVxmxkc" target="_blank" rel="noopener noreferrer">
-              <i class="nes-icon youtube is-small"></i>
+          <div class="col s12 mt-2">
+            <a class="nes-btn second-meetup ml-1" href="//youtu.be/ei9RbnuG5RM" target="_blank"
+              rel="noopener noreferrer">
+              Ver video
             </a>
           </div>
         </div>
-        <div class="event-details valign-wrapper">
+        <div class="event-details second-meetup valign-wrapper">
           <div class="w-100 my-1">
-            <p class="m-0 white-text">PRESS START - 1er Meetup</p>
-            <p class="m-0 white-text">Sábado, 01 de Agosto 15:00</p>
+            <p class="m-0 white-text">LEVEL 1</p>
+            <p class="m-0 white-text">2do Meetup</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col s12 m4 mb-2">
+      <div class="event">
+        <div class="event-border event-border-top third-meetup"></div>
+        <div class="event-border event-border-left third-meetup"></div>
+        <div class="event-border event-border-bottom third-meetup"></div>
+        <div class="event-border event-border-right third-meetup"></div>
+        <div class="row p-1">
+          <div class="col s12 mt-2">
+            <img src="assets/images/third-meetup.png" alt="meetup">
+          </div>
+          <div class="col s12 mt-2">
+            <a class="nes-btn third-meetup ml-1" href="//youtu.be/q3FjxXUD694" target="_blank"
+              rel="noopener noreferrer">
+              Ver video
+            </a>
+          </div>
+        </div>
+        <div class="event-details third-meetup valign-wrapper">
+          <div class="w-100 my-1">
+            <p class="m-0 white-text">CHECKPOINT</p>
+            <p class="m-0 white-text">3er Meetup</p>
           </div>
         </div>
       </div>
