--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,5 +3,6 @@
 <wgj-communities></wgj-communities>
 <wgj-our-goal></wgj-our-goal>
 <wgj-previous-events></wgj-previous-events>
+<wgj-global-community></wgj-global-community>
 <wgj-avatar-generator></wgj-avatar-generator>
 <wgj-social-networks></wgj-social-networks>
