--- a/src/styles.generic.scss
+++ b/src/styles.generic.scss
@@ -1,5 +1,5 @@
 // Generic styles
-
+@import './styles.variables';
 
 // Width
 .w-100 {
@@ -12,35 +12,50 @@
 }
 
 .mx-1 {
-  margin: 0 1rem;
+  margin-left: 1rem !important;
+  margin-right: 1rem !important;
+}
+
+.mx-3 {
+  margin-left: 3rem !important;
+  margin-right: 3rem !important;
+}
+
+.mx-sm-6 {
+  @media #{$small-and-down} {
+    margin-left: 6rem !important;
+    margin-right: 6rem !important;
+  }
 }
 
 .my-1 {
-  margin: 1rem 0;
+  margin-bottom: 1rem !important;
+  margin-top: 1rem !important;
 }
 
 .my-2 {
-  margin: 2rem 0;
+  margin-bottom: 2rem !important;
+  margin-top: 2rem !important;
 }
 
 .mt-1 {
-  margin-top: 1rem;
+  margin-top: 1rem !important;
 }
 
 .mt-2 {
-  margin-top: 2rem;
+  margin-top: 2rem !important;
 }
 
 .mt-3 {
-  margin-top: 3rem;
+  margin-top: 3rem !important;
 }
 
 .mb-2 {
-  margin-bottom: 2rem;
+  margin-bottom: 2rem !important;
 }
 
 .ml-1 {
-  margin-left: 1rem;
+  margin-left: 1rem !important;
 }
 
 
@@ -50,29 +65,39 @@
 }
 
 .p-1 {
-  padding: 1rem;
+  padding: 1rem !important;
 }
 
 .px-2 {
-  padding: 0 2rem !important;
+  padding-left: 2rem !important;
+  padding-right: 2rem !important;
 }
 
 .py-6 {
-  padding: 6rem 0;
+  padding-bottom: 6rem !important;
+  padding-top: 6rem !important;
 }
 
 .pt-2 {
-  padding-top: 2rem;
+  padding-top: 2rem !important;
 }
 
 .pt-6 {
-  padding-top: 6rem;
+  padding-top: 6rem !important;
 }
 
 .pb-1 {
-  padding-bottom: 1rem;
+  padding-bottom: 1rem !important;
 }
 
 .pb-2 {
-  padding-bottom: 2rem;
+  padding-bottom: 2rem !important;
+}
+
+.pb-3 {
+  padding-bottom: 3rem !important;
+}
+
+.pb-6 {
+  padding-bottom: 6rem !important;
 }
