Refactored Avatar Generator.

--- a/src/app/home/avatar-generator/selector/atribute-selector.component.html
+++ b/src/app/home/avatar-generator/selector/atribute-selector.component.html
@@ -1,33 +1,33 @@
 <!-- Rounded dialog -->
-<section>
-  <div class="card nes-container with-title" (click)="openModal()">
-    <p class="title">{{decorator.name}}</p>
-    <div [innerHTML]="getIcon() | safeHtml"></div>
-  </div>
+<div class="card nes-container with-title" (click)="decoratorModal.open()">
+  <p class="title">{{ decorator.name }}</p>
+  <div [innerHTML]="getIcon() | safeHtml"></div>
+</div>
 
-  <div [id]="dialogId" class="modal nes-dialog is-rounded">
-    <button type="button" class="nes-btn is-error close-btn pixel-text white-text" (click)="closeModal()">X</button>
-    <form *ngIf="activeModal" method="dialog">
-      <div class="row">
-        <p class="pixel-title">Selecciona un tipo {{decorator.name}}</p>
-        <div class="col s12 m6">
-          <div [innerHTML]="getAvatar() | safeHtml"></div> 
-        </div>
-        <div class="col s12 m6">
-          <div>
-            <label class="description-text black-text pixel-text" for="favcolor">puedes cambiar el color 🎨 aquí:</label>
-            <input type="color" name="favcolor" [(ngModel)]="color" name="color">
-          </div>
-          <div class="row">
-            <div *ngFor="let item of decorator.options" class="col s4 m3">
-              <div class="card grey lighten-3">
-                <div class="bg-item" (click)="selectItem(item)" [class.selectedItem]="item === decorator.currentValue" [innerHTML]="getPreviewItem(item) | safeHtml"></div>
-              </div>
+<div #decoratorModal=modalDirective wgjModal class="modal nes-dialog is-rounded">
+  <button type="button" class="nes-btn is-error close-btn pixel-text white-text" (click)="decoratorModal.close()">
+    X
+  </button>
+  <form method="dialog">
+    <div class="row">
+      <p class="pixel-title">Selecciona un tipo de {{ decorator.name }}</p>
+      <div class="col s12 m6">
+        <div [innerHTML]="getAvatar() | safeHtml"></div>
+      </div>
+      <div class="col s12 m6">
+        <label class="description-text black-text pixel-text" for="favcolor">
+          Puedes cambiar el color 🎨 aquí:
+        </label>
+        <input type="color" name="favcolor" [(ngModel)]="color" name="color">
+        <div class="row">
+          <div *ngFor="let item of decorator.options" class="col s4 m3">
+            <div class="card grey lighten-3">
+              <div class="bg-item" (click)="selectItem(item)" [class.selectedItem]="item === decorator.currentValue"
+                [innerHTML]="getPreviewItem(item) | safeHtml"></div>
             </div>
-          </div>       
+          </div>
         </div>
       </div>
-    </form>
-  </div>
-
-</section>
+    </div>
+  </form>
+</div>
