--- a/src/app/home/avatar-generator/avatar-generator.component.html
+++ b/src/app/home/avatar-generator/avatar-generator.component.html
@@ -1,14 +1,16 @@
 <div class="center-align container">
   <div class="my-2">
-    <h4 class="title pixel-text">Crea tu propio avatar</h4>
+    <h4 class="title">Crea tu propio avatar</h4>
   </div>
   <div class="row">
     <div class="col s12 m6">
-      <div #screen class="bg-image center">
+      <div #screen class="bg-image center px-2">
         <img class="logo" src="assets/images/logo.svg" alt="cielo de noche">
         <div [innerHTML]="buildAvatarSvg() | safeHtml"></div>
       </div>
-      <button (click)="downloadImage()" type="button" class="nes-btn is-primary pixel-text my-2">Descargar avatar</button>
+      <button (click)="downloadImage()" type="button" class="nes-btn is-primary my-2">
+        Descargar avatar
+      </button>
     </div>
     <div class="col s12 m6">
       <div *ngFor="let key of avatarKeys" class="col s6 m4">
@@ -16,7 +18,7 @@
       </div>
     </div>
   </div>
-  <div id="download">
+  <div class="hide">
     <img #canvas>
     <a #downloadLink>Descarga</a>
   </div>
