Added and fixed unit tests.

--- a/src/app/home/avatar-generator/avatar-generator.component.html
+++ b/src/app/home/avatar-generator/avatar-generator.component.html
@@ -14,7 +14,7 @@
     </div>
     <div class="col s12 m6">
       <div *ngFor="let key of avatarKeys" class="col s6 m4">
-        <wgj-atribute-selector [dialogId]="key" [avatar]="avatar" [decorator]="avatar[key]"></wgj-atribute-selector>
+        <wgj-attribute-selector [dialogId]="key" [avatar]="avatar" [decorator]="avatar[key]"></wgj-attribute-selector>
       </div>
     </div>
   </div>
