Added characters images and description to avatar-generator section.

--- a/src/app/home/avatar-generator/avatar-generator.component.html
+++ b/src/app/home/avatar-generator/avatar-generator.component.html
@@ -1,6 +1,15 @@
 <div class="center-align container">
   <div class="my-2">
     <h4 class="title">Crea tu propio avatar</h4>
+    <div class="row">
+      <div class="col s12 offset-m2 m8">
+        <p class="description-text">
+          Desarrollamos esta herramienta para que puedas crear tu avatar y usarlo en tu cuenta de discord para
+          interactuar con todas las participantes.
+        </p>
+      </div>
+    </div>
+    <img class="mb-1 max-w-100" src="assets/images/avatar-characters.png" alt="personajes pixelados">
   </div>
   <div class="row">
     <div class="col s12 m6">
