--- a/src/app/home/banner/banner.component.html
+++ b/src/app/home/banner/banner.component.html
@@ -6,7 +6,7 @@
           <img class="mb-2 logo" src="assets/images/banner-logo.png" alt="woman game jam bolivia">
         </div>
         <div class="col offset-m3 m6">
-          <img class="characters pb-2" src="assets/images/banner-characters.png" alt="personajes">
+          <img class="characters pb-2" src="assets/images/banner-characters.png" alt="personajes pixelados">
           <h3 class="white-text invitation-text">
             Participa y desarrolla tu creatividad e imaginación en un Game Jam online junto a más chicas
             creando tus propios juegos
