--- a/src/app/home/avatar-generator/avatar-generator.component.html
+++ b/src/app/home/avatar-generator/avatar-generator.component.html
@@ -4,7 +4,7 @@
     <div class="row">
       <div class="col s12 offset-m2 m8">
         <p class="description-text">
-          Desarrollamos esta herramienta para que puedas crear tu avatar y usarlo en tu cuenta de discord para
+          Desarrollamos esta herramienta para que puedas crear tu avatar y usarlo en tu cuenta de Discord para
           interactuar con todas las participantes.
         </p>
       </div>
