Added sponsors section.

--- a/src/app/home/global-community/global-community.component.html
+++ b/src/app/home/global-community/global-community.component.html
@@ -5,7 +5,7 @@
       <h4 class="title">Conoce la comunidad Global de Women Game Jam</h4>
     </div>
     <div class="col s12">
-      <a class="global-community-link" href="//www.womengamejam.org" target="_blank" rel="noopener noreferrer">
+      <a class="featured-link" href="//www.womengamejam.org" target="_blank" rel="noopener noreferrer">
         www.womengamejam.org
       </a>
     </div>
