--- a/src/styles.variables.scss
+++ b/src/styles.variables.scss
@@ -16,6 +16,7 @@ $secondary-color: #5656AF !default;
 $call-to-action-color: #53E3B7 !default;
 $about-us-color: #16064C !default;
 $text-color: #3d3d3d !default;
+$featured-color: #FF499E !default;
 $success-color: color('green', 'base') !default;
 $error-color: color('red', 'base') !default;
 $link-color: color('light-blue', 'darken-1') !default;
