--- a/src/styles.generic.scss
+++ b/src/styles.generic.scss
@@ -54,10 +54,6 @@
   margin-top: 3rem !important;
 }
 
-.mb-1 {
-  margin-bottom: 2rem !important;
-}
-
 .mb-2 {
   margin-bottom: 2rem !important;
 }
@@ -78,6 +74,11 @@
 .px-2 {
   padding-left: 2rem !important;
   padding-right: 2rem !important;
+}
+
+.py-2 {
+  padding-bottom: 2rem !important;
+  padding-top: 2rem !important;
 }
 
 .py-6 {
