Added missing communitites. Improved image quality of communities.

--- a/src/app/home/communities/communities.component.html
+++ b/src/app/home/communities/communities.component.html
@@ -10,28 +10,34 @@
 </div>
 <div class="community-logos w-100 pb-3">
   <div class="valign-wrapper mx-3 mx-sm-6 my-1">
-    <img src="assets/images/communities/adevi.png" alt="logo de adevi">
+    <img src="assets/images/communities/adevi.svg" alt="logo de adevi">
   </div>
   <div class="valign-wrapper mx-3 mx-sm-6 my-1">
-    <img src="assets/images/communities/gp4tech.png" alt="logo girl power for technology">
+    <img src="assets/images/communities/gp4tech.svg" alt="logo girl power for technology">
   </div>
   <div class="valign-wrapper mx-3 mx-sm-6 my-1">
-    <img src="assets/images/communities/angular-bolivia.png" alt="logo de angular bolivia">
+    <img src="assets/images/communities/angular-bolivia.svg" alt="logo de angular bolivia">
   </div>
   <div class="valign-wrapper mx-3 mx-sm-6 my-1">
-    <img src="assets/images/communities/flutter-cochabamba.png" alt="logo de flutter cochabamba">
+    <img src="assets/images/communities/flutter-cochabamba.svg" alt="logo de flutter cochabamba">
   </div>
   <div class="valign-wrapper mx-3 mx-sm-6 my-1">
-    <img src="assets/images/communities/gdg-santa-cruz.png" alt="logo del gdg santa cruz">
+    <img src="assets/images/communities/gdg-santa-cruz.svg" alt="logo del gdg santa cruz">
   </div>
   <div class="valign-wrapper mx-3 mx-sm-6 my-1">
-    <img src="assets/images/communities/pyladies.png" alt="logo de pyladies">
+    <img src="assets/images/communities/pyladies.svg" alt="logo de pyladies">
   </div>
   <div class="valign-wrapper mx-3 mx-sm-6 my-1">
-    <img src="assets/images/communities/scesi.png"
+    <img src="assets/images/communities/scesi.svg"
       alt="logo de la sociedad científica de estudiantes de sistemas e informática">
   </div>
   <div class="valign-wrapper mx-3 mx-sm-6 my-1">
-    <img src="assets/images/communities/mujerestics.png" alt="logo de mujeres tics bolivia">
+    <img src="assets/images/communities/mujerestics.svg" alt="logo de mujeres tics bolivia">
+  </div>
+  <div class="valign-wrapper mx-3 mx-sm-6 my-1">
+    <img src="assets/images/communities/wit.svg" alt="logo de women in technology">
+  </div>
+  <div class="valign-wrapper mx-3 mx-sm-6 my-1">
+    <img src="assets/images/communities/mi-maker-house.svg" alt="logo de mi maker house">
   </div>
 </div>
