Changed png by svg version of the images. Added margin auto to communities logos.

--- a/src/app/home/banner/banner.component.html
+++ b/src/app/home/banner/banner.component.html
@@ -3,10 +3,10 @@
     <div class="container">
       <div class="row">
         <div class="col s12">
-          <img class="mb-2 logo" src="assets/images/banner-logo.png" alt="woman game jam bolivia">
+          <img class="mb-2 logo" src="assets/images/logo.svg" alt="woman game jam bolivia">
         </div>
         <div class="col offset-m3 m6">
-          <img class="characters pb-2" src="assets/images/banner-characters.png" alt="personajes pixelados">
+          <img class="characters pb-2" src="assets/images/banner-characters.svg" alt="personajes pixelados">
           <h3 class="white-text invitation-text">
             Participa y desarrolla tu creatividad e imaginación en un Game Jam online junto a más chicas
             creando tus propios juegos
@@ -21,7 +21,7 @@
   <div class="w-100 pb-2 organizers">
     <div class="row">
       <div class="col s12 px-2 center-align">
-        <img class="organizers-image" src="assets/images/banner-organizers.png" alt="women techmakers cochabamba">
+        <img class="organizers-image" src="assets/images/banner-organizers.svg" alt="women techmakers cochabamba">
       </div>
     </div>
   </div>
