--- a/src/app/home/previous-events/previous-events.component.html
+++ b/src/app/home/previous-events/previous-events.component.html
@@ -17,7 +17,7 @@
         <div class="event-border event-border-right first-meetup"></div>
         <div class="row p-1">
           <div class="col s12 mt-2">
-            <img src="assets/images/first-meetup.png" alt="meetup">
+            <img src="assets/images/first-meetup.svg" alt="meetup">
           </div>
           <div class="col s12 mt-2">
             <a class="nes-btn first-meetup ml-1" href="//youtu.be/sOkMeVxmxkc" target="_blank"
@@ -42,7 +42,7 @@
         <div class="event-border event-border-right second-meetup"></div>
         <div class="row p-1">
           <div class="col s12 mt-2">
-            <img src="assets/images/second-meetup.png" alt="meetup">
+            <img src="assets/images/second-meetup.svg" alt="meetup">
           </div>
           <div class="col s12 mt-2">
             <a class="nes-btn second-meetup ml-1" href="//youtu.be/ei9RbnuG5RM" target="_blank"
@@ -67,7 +67,7 @@
         <div class="event-border event-border-right third-meetup"></div>
         <div class="row p-1">
           <div class="col s12 mt-2">
-            <img src="assets/images/third-meetup.png" alt="meetup">
+            <img src="assets/images/third-meetup.svg" alt="meetup">
           </div>
           <div class="col s12 mt-2">
             <a class="nes-btn third-meetup ml-1" href="//youtu.be/q3FjxXUD694" target="_blank"
