Updated initial site data for 2021 event.

--- a/src/app/home/banner/banner.component.html
+++ b/src/app/home/banner/banner.component.html
@@ -12,8 +12,13 @@
             creando tus propios juegos
           </h3>
           <h3 class="event-date invitation-text">
-            Del 21 al 30 de Agosto
+            Del 20 al 22 de Agosto del 2021
           </h3>
+          <div class="mt-1">
+            <a href="https://bit.ly/WGJES" target="_blank" rel="noopener noreferrer">
+              <img src="assets/images/register.svg" class="button-signup" alt="inscríbete">
+            </a>
+          </div>
         </div>
       </div>
     </div>
