--- a/src/app/home/about-us/about-us.component.html
+++ b/src/app/home/about-us/about-us.component.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col s12 offset-m3 m6 center-align about-us">
       <b>Women Game Jam</b>
-      <p>Es un evento de 10 días enfocado al público femenino. Un espacio con un espíritu de creación, networking y
+      <p>Es un evento de 48 horas enfocado al público femenino. Un espacio con un espíritu de creación, networking y
         colaboración entre todas las participantes.</p>
     </div>
   </div>
