--- a/src/app/home/previous-events/previous-events.component.html
+++ b/src/app/home/previous-events/previous-events.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <h4 class="title">Eventos previos</h4>
+  <h4 class="title">Eventos previos del 2020</h4>
   <div class="row">
     <div class="col s12 m10 p-0">
       <p class="description-text">
