--- a/src/app/home/avatar-generator/avatar-generator.component.scss
+++ b/src/app/home/avatar-generator/avatar-generator.component.scss
@@ -1,5 +1,5 @@
 .bg-image {
-  background-image: url(../../../assets/images/background.png);
+  background-image: url(../../../assets/images/background.svg);
   background-position: center;
 }
 
