fix lint issues

--- a/src/app/home/avatar-generator/attribute-selector/attribute-selector.component.html
+++ b/src/app/home/avatar-generator/attribute-selector/attribute-selector.component.html
@@ -16,7 +16,7 @@
           <div [innerHTML]="getAvatar() | safeHtml"></div>
         </div>
         <div class="col s12 m6">
-          <div *ngIf="haveColor">
+          <div *ngIf="hasColor">
             <label class="description-text black-text" for="favcolor">
               Puedes cambiar el color 🎨 aquí:
             </label>
