--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <wgj-banner></wgj-banner>
 <wgj-about-us></wgj-about-us>
-<!-- <wgj-communities></wgj-communities> -->
+<wgj-communities></wgj-communities>
 <!-- <wgj-sponsors></wgj-sponsors> -->
 <wgj-our-goal></wgj-our-goal>
 <wgj-previous-events></wgj-previous-events>
